--- a/WebView/Base.lproj/Main.storyboard
+++ b/WebView/Base.lproj/Main.storyboard
@@ -1,26 +1,88 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Web View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WebView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="owZ-33-ZQ4">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Ixl-Vj-6va"/>
+                                </connections>
+                            </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5e6-hh-3up">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem image="back" id="hvh-Fs-qqX">
+                                        <connections>
+                                            <action selector="back:" destination="BYZ-38-t0r" id="RRG-wW-GWW"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="3ws-OT-8gE"/>
+                                    <barButtonItem image="forward" id="P6R-vP-tuB">
+                                        <connections>
+                                            <action selector="go:" destination="BYZ-38-t0r" id="HdN-2p-b66"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="wqK-up-bJs"/>
+                                    <barButtonItem image="refresh" id="7Ny-gM-chQ">
+                                        <connections>
+                                            <action selector="refresh:" destination="BYZ-38-t0r" id="85x-SO-Fb4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9E0-P4-4Jd"/>
+                                    <barButtonItem systemItem="action" id="xA0-Dl-mvR">
+                                        <connections>
+                                            <action selector="stop:" destination="BYZ-38-t0r" id="aWC-wl-KVo"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5e6-hh-3up" secondAttribute="bottom" id="8G3-nF-caQ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="owZ-33-ZQ4" secondAttribute="bottom" id="Rlh-Pk-d0y"/>
+                            <constraint firstAttribute="trailing" secondItem="5e6-hh-3up" secondAttribute="trailing" id="a72-cn-DEk"/>
+                            <constraint firstAttribute="trailing" secondItem="owZ-33-ZQ4" secondAttribute="trailing" id="e0j-FR-TII"/>
+                            <constraint firstItem="owZ-33-ZQ4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fZa-bs-6Wx"/>
+                            <constraint firstItem="5e6-hh-3up" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="i3L-Np-5Lu"/>
+                            <constraint firstItem="owZ-33-ZQ4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="rsg-sU-uZQ"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Web View" id="gjs-XF-8uG"/>
+                    <connections>
+                        <outlet property="userToolbar" destination="5e6-hh-3up" id="2BL-LW-Chs"/>
+                        <outlet property="userWebView" destination="owZ-33-ZQ4" id="k3O-jZ-doE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="4125.6000000000004" y="138.0809595202399"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back" width="30" height="30"/>
+        <image name="forward" width="30" height="30"/>
+        <image name="refresh" width="30" height="30"/>
+    </resources>
 </document>
